--- a/preflight/squiz/squizUI.css
+++ b/preflight/squiz/squizUI.css
@@ -198,6 +198,11 @@ Nav block
   color: #c84c01;
 }
 
+@media (min-width: 768px) {
+  .ntg-video-embed .col-md-6 h2, .ntg-video-embed .col-md-6 h3, .ntg-video-embed .col-md-6 h4, .ntg-video-embed .col-md-6 h5, .ntg-video-embed .col-md-6 h6 {
+    margin-top: 0;
+  }
+}
 /*
 -----------------------------
 Accordion
