Update code to duplicate floating button under content__main

--- a/assets/components/floating-button.html
+++ b/assets/components/floating-button.html
@@ -173,7 +173,7 @@
         </div>
       </div>
 
-      <main id="content" class="ntg-body">
+      <main id="content" class="ntg-body content__main">
         <div class="container-xl pt-5">
           <div class="row">
             <div class="col my-0 mt-md-4 mb-md-1">
